<resources>
    <string name="app_name">Creator-Editor Broker</string>

    <!-- Facebook -->
    <string name="facebook_app_id">332612361244166</string>
    <string name="fb_login_protocol_scheme">fb332612361244166</string>

    <string name="sign_in_with_google">구글 로그인</string>
    <string name="email">이메일</string>
    <string name="password">패스워드</string>
    <string name="sign_in">로그인</string>
    <string name="profile">프로필</string>
    <string name="public_name">공개이름</string>
    <string name="user_type_selection">유저 타입 선택</string>
    <string name="categories_selection">카테고리 선택</string>
    <string name="categories_selection_description">주 컨텐츠와 관련된 카테고리를 선택해주세요.</string>
    <string name="phone_number">전화번호</string>
    <string name="verification">본인인증</string>
    <string name="sign_in_with_facebook">페이스북 로그인</string>
    <string name="sign_in_with_twitter">트위터 로그인</string>
    <string name="failed_to_sign_in_with_google">구글 로그인에 실패했습니다.</string>
    <string name="failed_to_sign_in_with_facebook">페이스북 로그인에 실패했습니다.</string>
    <string name="failed_to_sign_in_with_twitter">트위터 로그인에 실패했습니다.</string>
    <string name="failed_to_sign_in_with_email">이메일 로그인에 실패했습니다.</string>
    <string name="register">등록</string>
    <string name="failed_to_read_user_data">유저 정보를 불러오지 못했습니다.</string>
    <string name="signed_in">로그인되었습니다.</string>
    <string name="signed_out">로그아웃되었습니다.</string>
    <string name="failed_to_store_profile_image">프로필 이미지 저장에 실패했습니다.</string>
    <string name="profile_stored">프로필이 저장되었습니다.</string>
    <string name="profile_updated">프로필을 업데이트했습니다.</string>
    <string name="failed_to_store_profile">프로필 저장에 실패했습니다.</string>
    <string name="failed_to_generate_token_and_regenerated_upon_sign_in">토큰 생성에 실패했습니다.
        \n로그인시 다시 생성됩니다.</string>
    <string name="uid_not_found">유저 아이디를 찾을 수 없습니다.</string>
    <string name="enter_public_name">공개이름을 입력하세요.</string>
    <string name="select_user_type">유저 타입을 선택하세요.</string>
    <string name="select_one_or_more_categories">1개 이상의 카테고리를 선택하세요.</string>
    <string name="account_not_found">계정을 찾을 수 없습니다</string>
    <string name="profile_creation">프로필 작성</string>
    <string name="profile_creation_request_message_01">프로필을 작성하시겠습니까?</string>
    <string name="profile_creation_request_message_02">프로필을 작성하셔야 이용하실 수 있습니다</string>
    <string name="sign_in_request_message">로그인 후 이용하실 수 있습니다.</string>

    <!-- User Types -->
    <string name="creator">크리에이터</string>
    <string name="editor">에디터</string>

    <!-- Content Categories -->
    <string name="category_car">자동차</string>  <!-- Category number 1 -->
    <string name="category_beauty_fashion">뷰티/패션</string>  <!-- Category number 2 -->
    <string name="category_comedy">코미디</string>  <!-- Category number 3 -->
    <string name="category_education">교육</string>  <!-- Category number 4 -->
    <string name="category_entertainment">엔터테인먼트</string>  <!-- Category number 5 -->
    <string name="category_family_entertainment">가족 엔터테인먼트</string>  <!-- Category number 6 -->
    <string name="category_movie_animation">영화/애니메이션</string>  <!-- Category number 7 -->
    <string name="category_food">음식</string>  <!-- Category number 8 -->
    <string name="category_game">게임</string>  <!-- Category number 9 -->
    <string name="category_know_how_style">노하우/스타일</string>  <!-- Category number 10 -->
    <string name="category_music">음악</string>  <!-- Category number 11 -->
    <string name="category_news_politics">뉴스/정치</string>  <!-- Category number 12 -->
    <string name="category_non_profit_social_movement">비영리/사회운동</string>  <!-- Category number 13 -->
    <string name="category_people_blog">인물/블로그</string>  <!-- Category number 14 -->
    <string name="category_pets_animals">애완동물/동물</string>  <!-- Category number 15 -->
    <string name="category_science_technology">과학기술</string>  <!-- Category number 16 -->
    <string name="category_sports">스포츠</string>  <!-- Category number 17 -->
    <string name="category_travel_event">여행/이벤트</string> <!-- Category number 18 -->

    <string name="write_pr">PR 작성</string>
    <string name="favorites">관심목록</string>
    <string name="my_stars">나의 별</string>

    <string name="my_page">마이 페이지</string>

    <string name="title">제목</string>
    <string name="pr">PR</string>
    <string name="select_type">타입 선택</string>
    <string name="register_works">작품 등록</string>
    <string name="thumbnail">썸네일</string>
    <string name="add_channel">채널 추가</string>
    <string name="there_are_no_registered_channels">등록된 채널이 없습니다.</string>

    <string name="complete">완료</string>
    <string name="failed_to_authorization">인증에 실패했습니다.</string>
    <string name="failed_to_connect_authorization_service">인증 서비스 연결에 실패했습니다.</string>
    <string name="failed_to_get_videos">비디오를 불러오는데 실패했습니다.</string>

    <string name="failed_to_get_access_token">액세스 토큰을 얻는데 실패했습니다.</string>
    <string name="failed_to_get_channels">채널을 가져오는데 실패했습니다.</string>
    <string name="failed_to_get_playlists">플레이리스트를 가져오는데 실패했습니다.</string>
    <string name="channel_thumbnail">Channel Thumbnail</string>
    <string name="playlists">플레이리스트</string>
    <string name="all_videos">모든 비디오</string>
    <string name="n_channel_was_not_found">개의 채널을 찾지 못했습니다.</string>
    <string name="channel_is_already_registered">이미 등록된 채널입니다.</string>
    <string name="invalid_authorization_code">유효하지 않은 인증 코드입니다.</string>
    <string name="videos">비디오</string>
    <string name="there_are_no_registered_videos">등록된 비디오가 없습니다.</string>
    <string name="settings">설정</string>
    <string name="sign_out">로그아웃</string>
    <string name="please_enter_your_email">이메일을 입력해주세요.</string>
    <string name="please_enter_your_password">비밀번호를 입력해주세요.</string>
    <string name="sign_up">회원가입</string>
    <string name="ok">확인</string>
    <string name="enter_verification_code">인증번호 입력</string>
    <string name="phone_number_verification_message">본인인증 (전화번호는 본인인증에만 사용됩니다.)</string>
    <string name="verification_code">인증번호</string>

    <!-- Verification -->
    <string name="invalid_request">유효하지 않은 요청입니다. 전화번호를 확인해주세요.</string>
    <string name="verification_failed">인증에 실패했습니다.</string>
    <string name="please_enter_phone_number">전화번호를 입력하세요.</string>
    <string name="please_enter_verification_code">인증코드를 입력하세요.</string>

    <string name="password_too_weak">너무 약한 비밀번호입니다.</string>
    <string name="email_already_signed_up">이미 가입된 이메일입니다.</string>
    <string name="failed_to_create_account">계정 생성에 실패했습니다.</string>

    <string name="only_videos_from_my_channel_can_be_registered">내 채널의 비디오만 등록할 수 있습니다.</string>
    <string name="failed_to_register_video">비디오를 등록하지 못했습니다.</string>
    <string name="play_video">비디오 재생</string>
    <string name="add_to_my_works">내 작품에 추가</string>
    <string name="please_try_again">다시 시도 해주세요.</string>
    <string name="failed_to_initialize_player">플레이어를 초기화하지 못했습니다.</string>

    <!-- YouTube Player Error Reason -->
    <string name="youtube_player_error_reason_autoplay_disabled">autoplay 제한으로 인해 플레이어가 재생목록의 다음 동영상으로 자동으로 이동하지 않았습니다.</string>
    <string name="youtube_player_error_reason_blocked_for_app">콘텐츠 소유자가 이 앱에서 동영상 퍼가기를 차단했기 때문에 현재 동영상을 로드하지 못했습니다.</string>
    <string name="youtube_player_error_reason_embedding_disabled">콘텐츠 소유자가 이 동영상의 퍼가기를 허용하지 않기 때문에 현재 동영상을 로드하지 못했습니다.</string>
    <string name="youtube_player_error_reason_empty_playlist">로드된 재생목록에 동영상이 포함되어 있지 않아 재생을 시작하지 못했습니다.</string>
    <string name="youtube_player_error_reason_internal_error">내부 오류로 인해 현재 동영상을 로드하지 못했습니다.</string>
    <string name="youtube_player_error_reason_network_error">네트워크 요청 실패로 인해 오류가 발생했습니다.</string>
    <string name="youtube_player_error_reason_not_playable">현재 동영상이 재생 가능한 상태가 아니기 때문에 동영상을 로드하지 못했습니다.</string>
    <string name="youtube_player_error_reason_player_view_too_small">플레이어의 뷰가 너무 작아 재생이 중지되었습니다.</string>
    <string name="youtube_player_error_reason_unauthorized_overlay">플레이어에 뷰가 오버레이되어 재생이 중지되었습니다.</string>
    <string name="youtube_player_error_reason_unexpected_service_disconnection">YouTube API 서비스와의 예상치 못한 연결 해제로 인해 재생이 취소되고 플레이어가 해제되었습니다.</string>
    <string name="youtube_player_error_reason_unknown">오류의 원인을 알 수 없습니다.</string>
    <string name="youtube_player_error_reason_user_declined_high_bandwidth">사용자가 고대역폭 스트림의 재생 허용을 거부했기 때문에 재생이 취소되었습니다.</string>
    <string name="youtube_player_error_reason_user_declined_restricted_content">제한된 콘텐츠의 재생이 거부되었기 때문에 재생이 취소되었습니다.</string>

    <string name="unknown_error_has_occurred">알 수 없는 오류가 발생했습니다.</string>

    <string name="pr_list">PR 리스트</string>
    <string name="partners">파트너스</string>
    <string name="description">내용</string>
    <string name="select_target">타겟 선택</string>
    <string name="find_creator">크리에이터 찾기</string>
    <string name="find_editor">에디터 찾기</string>
    <string name="please_enter_title">제목을 입력하세요.</string>
    <string name="please_enter_description">내용을 입력하세요.</string>
    <string name="please_select_target">타겟을 선택하세요.</string>

    <!-- Push Token -->
    <string name="token_generation_failed">토큰 생성에 실패했습니다.</string>
    <string name="send">Send</string>

    <!-- Chat -->
    <string name="failed_to_create_chat_room">채팅방 생성에 실패했습니다.</string>
    <string name="failed_to_load_chat_rooms">채팅방을 불러오지 못했습니다.</string>
    <string name="failed_to_load_chat_messages">채팅 메시지를 불러오지 못했습니다.</string>
    <string name="my_partners">내 파트너스</string>
    <string name="chat">채팅</string>
    <string name="failed_to_send_message">메시지 전송에 실패했습니다.</string>
    <string name="please_enter_your_message">메시지를 입력해주세요.</string>
    <string name="chat_room_not_found">채팅방을 찾을 수 없습니다.</string>

    <!-- PR -->
    <string name="pr_has_registered">PR이 등록되었습니다.</string>
    <string name="failed_to_register_pr">PR을 등록하지 못했습니다.</string>
    <string name="failed_to_add_to_watchlist">관심 목록에 추가하지 못했습니다.</string>

    <!-- Cloud Messaging -->
    <string name="failed_to_send_cloud_message">클라우드 메시지 전송에 실패했습니다.</string>

    <!-- Partners -->
    <string name="register_on_partners">파트너스에 등록</string>
    <string name="profile_has_been_registered_on_partners">프로필이 파트너스에 등록되었습니다.</string>
    <string name="failed_to_register_on_partners">파트너스에 등록하지 못했습니다.</string>

    <string name="cancel">취소</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="logo">Logo</string>
    <string name="start_youbroker">유브로커 시작하기</string>



    <!-- Sign Up -->
    <string name="code_lost">인증번호가 손실되었습니다.</string>
    <string name="code_sent">인증번호가 발송되었습니다.</string>
    <string name="invalid_phone_number">유효하지 않은 전화번호입니다.</string>
    <string name="request_identity_verification">본인인증 후 진행하십시오.</string>
    <string name="resend">재전송</string>
    <string name="send_verification_code">인증번호 발송</string>
    <string name="too_many_requests">너무 많은 요청으로 인증요청이 차단되었습니다. 잠시 후 다시 시도하십시오.</string>
    <string name="verification_code_mismatch">인증코드가 일치하지 않습니다.</string>
    <string name="verified">인증되었습니다.</string>

    <!-- Profile -->
    <string name="public_name_with_description">공개이름 (다른 유저들에게 보여질 이름입니다.)</string>
    <string name="withdrawal">탈퇴</string>
    <string name="type">타입</string>
    <string name="category">카테고리</string>

</resources>