<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragmentBackground"
    android:theme="@style/MaterialComponentsTheme">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorFragmentBackground"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/my_page" />

    <TextView
        android:id="@+id/text_public_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/public_name"
        android:textColor="@color/color_light_text"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/image_view_profile"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/text_user_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textColor="@color/color_light_text"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/image_view_profile"
        app:layout_constraintStart_toStartOf="@+id/text_view_public_name"
        app:layout_constraintTop_toBottomOf="@+id/text_view_public_name" />

    <TextView
        android:id="@+id/text_categories_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/color_light_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_view_user_type"
        app:layout_constraintTop_toBottomOf="@+id/text_view_user_type" />

    <ImageView
        android:id="@+id/image_view_profile"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/profile"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_public_name_title"
        app:srcCompat="@drawable/ic_round_account_circle_24" />

    <TextView
        android:id="@+id/text_view_public_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:padding="8dp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_view_profile"
        app:layout_constraintStart_toStartOf="@+id/text_public_name_title"
        app:layout_constraintTop_toBottomOf="@+id/text_public_name_title"
        tools:text="Public Name" />

    <TextView
        android:id="@+id/text_view_user_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:padding="8dp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/image_view_profile"
        app:layout_constraintTop_toBottomOf="@+id/text_user_type_title"
        tools:text="User Type" />

    <TextView
        android:id="@+id/text_view_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:padding="8dp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/image_view_profile"
        app:layout_constraintTop_toBottomOf="@+id/text_categories_title"
        tools:text="Categories" />

    <TextView
        android:id="@+id/text_view_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="24dp"
        android:elevation="4dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:text="@string/edit_profile"
        android:textColor="@color/colorDefaultBlack"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:drawableStartCompat="@drawable/ic_round_edit_28"
        app:drawableTint="@color/colorIconTint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_categories" />

    <TextView
        android:id="@+id/text_view_write_pr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:text="@string/write_pr"
        android:textColor="@color/colorDefaultBlack"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:drawablePadding="24dp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_profile"
        app:drawableStartCompat="@drawable/ic_round_list_alt_28"
        app:drawableTint="@color/colorIconTint"/>

    <TextView
        android:id="@+id/text_view_favorites"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:text="@string/favorites"
        android:textColor="@color/colorDefaultBlack"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:drawablePadding="24dp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_write_pr"
        app:drawableStartCompat="@drawable/ic_round_favorite_28"
        app:drawableTint="@color/colorIconTint"/>

    <TextView
        android:id="@+id/text_view_my_stars"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:text="@string/my_stars"
        android:textColor="@color/colorDefaultBlack"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:drawablePadding="24dp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_favorites"
        app:drawableStartCompat="@drawable/ic_round_star_32"
        app:drawableTint="@color/colorIconTint"/>

    <Button
        android:id="@+id/button_register_on_partners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/register_on_partners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>